[project]
name = "cocotbext-axi"
version = "0.1.24"
description = "AXI, AXI lite, and AXI stream simulation models for cocotb."
authors = [
    {name = "Alex Forencich"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
